fix with media queries resize on mobile

--- a/client/styles.scss
+++ b/client/styles.scss
@@ -196,13 +196,26 @@ $break-medium: 1024px;
     max-width: 100%;
   }
 }
-$break-small: 500px;
+$break-small: 568px;
 @media screen and (max-width: $break-small) {
   .container {
     flex-direction: column-reverse;
   }
   .text_tooltip {
     font-size: 30px;
+  }
+
+  .tabla {
+    max-width: 100%;
+  }
+}
+$break-lite: 320px;
+@media screen and (max-width: $break-lite) {
+  .container {
+    flex-direction: column-reverse;
+  }
+  .text_tooltip {
+    font-size: 35px;
   }
 
   .tabla {
